1997-12-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* objectbase.h: Constify argument to getProbedForVariable and
	getProbeForMessage (SwarmObject). 
	Constify return of getProbedType (Probe).
	Constify argument to setProbedVariable (VarProbe).
	Constify return of getProbedVariable (VarProbe).
	Constify argument to setFloatFormat (VarProbe).
	Constify return of probeAsString (VarProbe, both).
	Constify ToString argument to setData (VarProbe).
	Constify argument to setProbedMessage (MessageProbe).
	Constify return of getArgName (MessageProbe).
	Constify argument to getProbeForVariable
	and getProbeForMessage (ProbeMap).
	Constify argument to dropProbeForVariable
	and dropProbeForMessage (ProbeMap).
	Constify first argument to getProbeForVariable and getProbeForMessage
	(ProbeLibrary).
	Reformatting throughout.

	* VarProbe.m ([VarProbe -setProbedVariable:]): Constify argument.
	([VarProbe -getProbedVariable]): Constify return.
	([VarProbe -createEnd]): Use intermediate pointer for the sake
	of consting.
	([VarProbe -free]): Cast to argument to free as void* to avoid warning.
	([VarProbe -probeAsString:Buffer:buf]): Constify return.
	([VarProbe -probeAsString:Buffer:withFullPrecision:]): Constify return.
	([VarProbe -setData:ToString:]): Constify ToString: argument.
	([VarProbe -setData:ToString:]): Cast withData: argument to void*
	to avoid warning (twice).
	([VarProbe -setFloatFormat:]): Constify argument.
	Reformatting throughout.

	* VarProbe.h (VarProbe): Constify probedVariable and floatFormat.
	
	* VarProbe.h: Constify argument to setProbedVariable and
	setFloatFormat.  Constify return of getProbedVariable.  Constify
	ToString: argument of setData.
	Reformatting throughout.
	
	* SwarmObject.m ([SwarmObject -getProbeForVariable:]): 
	Constify argument.
	([SwarmObject -getProbeForMessage:]): Likewise.
	([SwarmObject -eventOccurredOn:anObjectvia:aProbewithProbeType:
	aProbeTypeon:probedElementofType:withData:]): Constify :on argument.