@@ -1,3 +1,10 @@
+1997-12-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* MessageProbe.m: Include tclObjc.h instead of tkobjc.h.
+	Minor reformatting. 
+	([MessageProbe -_trueDynamicCallOn_:resultStorage:result]): 
+	Update to renamed tkobjc_dynamicEval.
+	
 1997-12-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* objectbase.h: Constify argument to getProbedForVariable and
